--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start":"node app.js add --title=\"hello\" --body=\"My name is riyas\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yargs": "^17.6.2"
   }
 }
